<?xml version="1.0"?>
<package format="3">

  <name>mrg_sim</name>

  <version>0.0.1</version>

  <description>The mrg_sim package for simulating multi-robot LIDAR SLAM</description>

  <maintainer email="serov@uni-bremen.de">Andreas Serov</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 python  -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Not sure if the following lines are ROS1 dependent -->
    <gazebo_ros gazebo_plugin_path="lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
